# Football_scraping

./: .gitignore  README.md  data_bundes.json  data_ligue1.json  data_pl.json  data_serieA.json  info_joueur_1.json  info_joueur_2.json  info_joueur_seul.json  info_joueur_v1.json  info_joueur_v2.json  ligue1_complet.json  output.json  psg_complet.json  pyproject.toml
Application/: app.py
ML/: ML.py  ML_2.py  modele_1.py  modele_2.py
Machine_Learning/: modele_2.py
app/: app.py
data/: data_liga.json  dataset_avec_predictions.csv  dataset_avec_predictions_final.csv  dataset_avec_predictions_final_2.csv  modele_final.pkl  modele_final_2.pkl
src/projet_scrap/: Basemodel.py  __init__.py  dataset_final.json  fusion_data.py  output.json  scrap_blessure.py  scrap_club_info.py  scrap_elements.py  scrap_ligue.py  scrap_page_1.py  scrap_page_2.py  scrap_page_club.py  scrap_page_joueur.py  scrap_page_v1.py  scrap_page_v2.py  scrap_performance_detaillees.py  scrap_profil.py  scrap_trophees.py  scraping.py
src/projet_scrap/ML/: ML.py  ML_2.py
