[project]
name = "projet-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ya2n-bt", email = "yann.brochet@etu.univ-tours.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "playwright>=1.55.0",
    "streamlit>=1.52.2",
]

[project.scripts]
projet-scrap = "projet_scrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
