[project]
name = "projet-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ya2n-bt", email = "yann.brochet@etu.univ-tours.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "xgboost>=3.1.3",
]

[project.scripts]
projet-scrap = "projet_scrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
