[project]
name = "projet-scrap"
version = "0.1.0"
description = "Outil de scouting football - Comparaison Valeur Sportive vs Marché"
readme = "README.md"
authors = [
    { name = "ya2n-bt", email = "yann.brochet@etu.univ-tours.fr" }
]

requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "pandas>=2.2.0",
    "playwright>=1.40.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "joblib>=1.3.2",
    "streamlit>=1.30.0",
    "xgboost>=2.0.0",
]

[project.scripts]
projet-scrap = "projet_scrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true